@@ -166,6 +166,10 @@
 #endif
 
 //**************************************
+// Entity system thread safe
+//**************************************
+
+//**************************************
 // constants 
 //**************************************
 
