@@ -1016,6 +1016,9 @@
     <ClInclude Include="Include\core\TSQueue.h">
       <Filter>Include Files\core</Filter>
     </ClInclude>
+    <ClInclude Include="Include\core\KgeLock.h">
+      <Filter>Include Files\core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
