@@ -50,7 +50,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>KGELIB_EXPORTS;WIN32;_DEBUG;_WINDOWS;_USRDLL;ENTITYSYSTEM_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>KGE_EN_TS;KGE_USE_RAKNET;KGELIB_EXPORTS;WIN32;_DEBUG;_WINDOWS;_USRDLL;ENTITYSYSTEM_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
